[package]
name = "shipyard-temp-001"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3.10"
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc", "serialization"], default-features = false}
lazy_static = "1.4.0"
futures = "0.3"